--- a/translations/ar.json
+++ b/translations/ar.json
@@ -269,5 +269,12 @@
   "table_of_contents_title_description": "العنوان فوق جدول المحتويات",
   "table_of_contents_title_label": "عنوان جدول المحتويات",
   "separator_toggle_description": "تضمين الفاصل في الرأس",
-  "separator_toggle_label": "إظهار الفاصل"
+  "separator_toggle_label": "إظهار الفاصل",
+  "show_categories_description": "Show categories on the home page",
+  "show_categories_label": "Show categories",
+  "side_panel_navigation_group_label": "Side panel navigation",
+  "show_articles_in_navigation_description": "Display articles under sections in the side panel navigation",
+  "show_articles_in_navigation_label": "Show articles in navigation",
+  "side_panel_article_limit_description": "Maximum number of articles to display per section",
+  "side_panel_article_limit_label": "Article limit"
 }
