--- a/translations/bg.json
+++ b/translations/bg.json
@@ -269,5 +269,12 @@
   "table_of_contents_title_description": "Заглавие над таблицата със съдържание",
   "table_of_contents_title_label": "Заглавие на таблицата със съдържание",
   "separator_toggle_description": "Включване на разделителя в заглавието",
-  "separator_toggle_label": "Показване на разделителя"
+  "separator_toggle_label": "Показване на разделителя",
+  "show_categories_description": "Show categories on the home page",
+  "show_categories_label": "Show categories",
+  "side_panel_navigation_group_label": "Side panel navigation",
+  "show_articles_in_navigation_description": "Display articles under sections in the side panel navigation",
+  "show_articles_in_navigation_label": "Show articles in navigation",
+  "side_panel_article_limit_description": "Maximum number of articles to display per section",
+  "side_panel_article_limit_label": "Article limit"
 }
