--- a/translations/en-ca.json
+++ b/translations/en-ca.json
@@ -269,5 +269,12 @@
   "table_of_contents_title_description": "The title above the table of contents",
   "table_of_contents_title_label": "ToC title",
   "separator_toggle_description": "Include the separator in the header",
-  "separator_toggle_label": "Show separator"
+  "separator_toggle_label": "Show separator",
+  "show_categories_description": "Show categories on the home page",
+  "show_categories_label": "Show categories",
+  "side_panel_navigation_group_label": "Side panel navigation",
+  "show_articles_in_navigation_description": "Display articles under sections in the side panel navigation",
+  "show_articles_in_navigation_label": "Show articles in navigation",
+  "side_panel_article_limit_description": "Maximum number of articles to display per section",
+  "side_panel_article_limit_label": "Article limit"
 }
