--- a/translations/fi.json
+++ b/translations/fi.json
@@ -269,5 +269,12 @@
   "table_of_contents_title_description": "Otsikko sisällysluettelon yläpuolella",
   "table_of_contents_title_label": "Sisällysluettelon otsikko",
   "separator_toggle_description": "Sisällytä erotin otsikkoon",
-  "separator_toggle_label": "Näytä erotin"
+  "separator_toggle_label": "Näytä erotin",
+  "show_categories_description": "Näytä kategoriat kotisivulla",
+  "show_categories_label": "Näytä kategoriat",
+  "side_panel_navigation_group_label": "Sivupaneelin navigointi",
+  "show_articles_in_navigation_description": "Näytä artikkelit osioiden alla sivupaneelin navigoinnissa",
+  "show_articles_in_navigation_label": "Näytä artikkelit navigoinnissa",
+  "side_panel_article_limit_description": "Artikkelien enimmäismäärä osiota kohden",
+  "side_panel_article_limit_label": "Artikkeliraja"
 }
