--- a/translations/hu.json
+++ b/translations/hu.json
@@ -269,5 +269,12 @@
   "table_of_contents_title_description": "A tartalomjegyzék felett lévő cím",
   "table_of_contents_title_label": "Tartalomjegyzék címe",
   "separator_toggle_description": "Elválasztó beillesztése a fejlécbe",
-  "separator_toggle_label": "Elválasztó megjelenítése"
+  "separator_toggle_label": "Elválasztó megjelenítése",
+  "show_categories_description": "Kategóriák megjelenítése a kezdőlapon",
+  "show_categories_label": "Kategóriák megjelenítése",
+  "side_panel_navigation_group_label": "Oldalpanel navigáció",
+  "show_articles_in_navigation_description": "Cikkek megjelenítése a szakaszok alatt az oldalpanel navigációban",
+  "show_articles_in_navigation_label": "Cikkek megjelenítése a navigációban",
+  "side_panel_article_limit_description": "Szakaszonként megjelenítendő cikkek maximális száma",
+  "side_panel_article_limit_label": "Cikk limit"
 }
