--- a/translations/ru.json
+++ b/translations/ru.json
@@ -269,5 +269,12 @@
   "table_of_contents_title_description": "Заголовок над оглавлением",
   "table_of_contents_title_label": "Заголовок оглавления",
   "separator_toggle_description": "Включить разделитель в заголовке",
-  "separator_toggle_label": "Показать разделитель"
+  "separator_toggle_label": "Показать разделитель",
+  "show_categories_description": "Показать категории на главной странице",
+  "show_categories_label": "Показать категории",
+  "side_panel_navigation_group_label": "Навигация боковой панели",
+  "show_articles_in_navigation_description": "Отображать статьи под разделами в навигации боковой панели",
+  "show_articles_in_navigation_label": "Показать статьи в навигации",
+  "side_panel_article_limit_description": "Максимальное количество статей для отображения в разделе",
+  "side_panel_article_limit_label": "Лимит статей"
 }
